--- a/Lecture_10_NLP/index.html
+++ b/Lecture_10_NLP/index.html
@@ -34,23 +34,31 @@
 
 
 
-<div class="middle center"><div style="width: 100%">
+<!--s-->
 
-# Intro: ChatGPT 的诞生
+<div class="middle center">
+  <div style="width: 100%">
 
-</div></div>
+  # Part.0 新闻学的故事
+  
+  </div>
+</div>
 
 <!--v-->
 
-## ChatGPT
+## 我们已经拿ChatGPT说过很多次了
 
-- <span> ChatGPT: Chat Generative Pre-trained Transformer </span> <!-- .element: class="fragment" -->
-- <span> 2022 年 11 月 30 日，ChatGPT 横空出世，短短5天，注册用户数就超过100万。 </span> <!-- .element: class="fragment" -->
-- <span> 2023 年一月末，ChatGPT的月活用户已突破1亿，成为史上增长最快的消费者应用。 </span> <!-- .element: class="fragment" -->
-- <span> 笔者当时拿它做疫情期间的英语试卷，比我分还高 /TwT/ </span> <!-- .element: class="fragment" -->
-- <span> 引发了一火车 **新闻学乱象** </span> <!-- .element: class="fragment" -->
+自从ChatGPT爆火之后，GPT三个字母突然出现在了公众视野里。GPT作为一个“统一的整体”出现的越来越普遍，也引发很多非常幽默~~令人忍俊不禁~~的新闻学奇观。
 
 ![img|900](image.png)
+
+GPT究竟为什么会诞生？它最初是用来解决什么样的问题的？在它之前的模型又解决了什么样的问题？
+
+第四章的内容将带你进入**自然语言处理（NLP, Natural Language Processing）**的世界。
+
+<!-- 可是，我们的课程学到了今天，你有没有好奇过，GPT究竟是什么意思呢？
+- **Generative Pre-trained Transformer**
+它究竟是什么意思呢？非常遗憾的是这 -->
 
 
 <!--s-->
@@ -63,7 +71,7 @@
 
 <!--v-->
 
-## 自然语言处理（NLP, Natural Language Processing）
+## 自然语言处理
 
 - <span> 顾名思义：关注如何让计算机理解、解释和生成人类语言。 </span> <!-- .element: class="fragment" -->
 - <span> 早在人工智能兴起之前，NLP就是计算机科学的重要研究方向之一。我们很多熟知的技术，如搜索引擎、机器翻译、语音识别、人声合成等，都是NLP的应用。 </span> <!-- .element: class="fragment" -->
