--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 - [Lecture_09_Transformation_of_models](./Lecture_09_Transformation_of_models)
 - [Lecture_10_NLP](./Lecture_10_NLP)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
+- [Lecture_x_Search](./Lecture_x_Search)
 
 ---
 ## SI 100+ Notebook 页
