deploy: c120c8fc99d5b7c56054c84c8026ddecbbcae20a

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             
 ## SI 100+: 信息科学入门指南 Slides 页
 
+<div style="column-count:2; column-gap:0px; padding: 1vh">
+
 - [Lecture_00_Environment](./Lecture_00_Environment)
 - [Lecture_02_Python_Intro](./Lecture_02_Python_Intro)
 - [Lecture_03_Var_Operator_Expr](./Lecture_03_Var_Operator_Expr)
@@ -33,6 +35,8 @@
 - [Lecture_10_NLP](./Lecture_10_NLP)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
 - [Lecture_x_Search](./Lecture_x_Search)
+</div>
+
 
 ---
 ## SI 100+ Notebook 页
