deploy: 135a4a7315144484cc6b32b7b20f934f51627af1

--- a/Lecture_00_Environment/Lecture_00_Environment.html
+++ b/Lecture_00_Environment/Lecture_00_Environment.html
@@ -21,24 +21,24 @@
       <section data-markdown data-separator="<!--s-->" data-separator-vertical="<!--v-->">
         <textarea data-template>
             
-
+<p style="font-size: 16px; color: #999; margin:5px; position: absolute;"><a href="..">Homepage</a> | <a href="?print-pdf">Printable Version</a></p>
 <div style="display: flex; justify-content: center; align-items: center; height: 700px;">
   <div style="text-align: center; padding: 40px; background-color: white; border: 2px solid rgb(0, 63, 163); border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.1);">
     <h1 style="font-size: 48px; font-weight: bold; margin-bottom: 20px; color: #333;">SI100+ 2024 Lecture 0</h1>
     <p style="font-size: 24px; color: #666;">环境配置</p>
-    <p style="font-size: 16px; color: #999; margin-top: 20px;">SI100+ 2024 Staff | 2024-08-20</p>
+    <p style="font-size: 16px; color: #999; margin-top: 20px; margin-bottom:5px">SI100+ 2024 Staff | 2024-08-20</p>
   </div>
 </div>
 
 <!--s-->
 
-<div class="middle center">
-  <div style="width: 100%">
 
-  # Part.1 配置开始前的说明
-  
-  </div>
-</div>
+
+<div class="middle center"><div style="width: 100%">
+
+# Part.1 配置开始前的说明
+
+</div></div>
 
 <!--v-->
 
@@ -79,13 +79,11 @@
 
 <!--s-->
 
-<div class="middle center">
-  <div style="width: 100%">
+<div class="middle center"><div style="width: 100%">
 
-  # Part.2 Anaconda
+# Part.2 Anaconda
 
-  </div>
-</div>
+</div></div>
 
 <!--v-->
 
@@ -142,13 +140,11 @@
 
 <!--s-->
 
-<div class="middle center">
-  <div style="width: 100%">
+<div class="middle center"><div style="width: 100%">
 
-  # Part.3 VS Code & 插件
+# Part.3 VS Code & 插件
 
-  </div>
-</div>
+</div></div>
 
 <!--v-->
 
@@ -198,13 +194,11 @@
 
 <!--s-->
 
-<div class="middle center">
-  <div style="width: 100%">
+<div class="middle center"><div style="width: 100%">
 
-  # Part.4 在 VS Code 中使用 Jupyter Notebook
+# Part.4 在 VS Code 中使用 Jupyter Notebook
 
-  </div>
-</div>
+</div></div>
 
 <!--v-->
 
@@ -224,7 +218,7 @@
 
 <!--s-->
 
-<div style="display: flex; justify-content: center; align-items: center; height: 700px;">
+<div style="display: flex; justify-content: center; align-items: center; height: 700px;   ">
   <div style="text-align: center; padding: 40px; background-color: white; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.1);">
     <div style="display: inline-block; padding: 20px 40px; border-radius: 10 px; margin-bottom: 20px;">
       <h1 style="font-size: 48px; font-weight: bold; margin: 0; color: rgb(16, 33, 89)">Thanks for Listening</h1>
@@ -232,7 +226,6 @@
     <p style="font-size: 24px; color: #666; margin: 0;">Any questions?</p>
   </div>
 </div>
-
           </textarea>
       </section>
     </div>
@@ -315,7 +308,7 @@
     // options from URL query string
     var queryOptions = Reveal().getQueryHash() || {};
 
-    var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"pdfSeparateFragments":false,"_":["./Lecture_00_Environment/Lecture_00_Environment.md"],"static":"static/Lecture_00_Environment","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/menu/menu.js,assets/inject.js"}, queryOptions);
+    var options = extend(defaultOptions, {"_":["./Lecture_00_Environment/Lecture_00_Environment.md"],"static":"static/Lecture_00_Environment","template":"./assets/reveal.html","preprocessor":"./assets/preproc.js","scripts":"assets/menu/menu.js,assets/inject.js"}, queryOptions);
   </script>
 
   <script src="./_assets/assets/menu/menu.js"></script>
