--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
 ## SI 100+: 信息科学入门指南 Slides 页
 
-<div style="column-count:2; column-gap:0px; padding: 1vh">
+<div style="column-count:2; column-gap:0px; padding: 1vh; word-break: break-word">
 
 - [Lecture_00_Environment](./Lecture_00_Environment)
 - [Lecture_02_Python_Intro](./Lecture_02_Python_Intro)
