deploy: 30a1576d7f4f2ee7519f5bf34cee22144b8490dd

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 - [Lecture_09_Transformation_of_models](./Lecture_09_Transformation_of_models)
 - [Lecture_10_NLP](./Lecture_10_NLP)
 - [Lecture_i_Basic_Knowledge](./Lecture_i_Basic_Knowledge)
+- [Lecture_iii_AI_Libs](./Lecture_iii_AI_Libs)
+</hr>
 - [Lecture_x_Search](./Lecture_x_Search)
 </div>
 
